update & fix