@@ -1,6 +1,12 @@
 package orison.potions;
 
 import basemod.abstracts.CustomPotion;
+
+import java.lang.reflect.InvocationTargetException;
+
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
+
 import com.badlogic.gdx.graphics.Color;
 import com.megacrit.cardcrawl.characters.AbstractPlayer;
 import com.megacrit.cardcrawl.core.CardCrawlGame;
@@ -9,6 +15,9 @@ import com.megacrit.cardcrawl.localization.PotionStrings;
 import com.megacrit.cardcrawl.potions.AbstractPotion;
 
 public abstract class AbstractEasyPotion extends CustomPotion {
+
+    private static Logger logger = LogManager.getLogger(AbstractEasyPotion.class);
+
     public AbstractPlayer.PlayerClass pool;
     protected PotionStrings strings;
 
@@ -45,9 +54,11 @@ public abstract class AbstractEasyPotion extends CustomPotion {
 
     public AbstractPotion makeCopy() {
         try {
-            return getClass().newInstance();
-        } catch (IllegalAccessException | InstantiationException e) {
-            throw new RuntimeException("BaseMod failed to auto-generate makeCopy for potion: " + ID);
+            return getClass().getConstructor().newInstance();
+        } catch (IllegalAccessException | InstantiationException | NoSuchMethodException
+                | InvocationTargetException e) {
+            logger.fatal("BaseMod failed to auto-generate makeCopy for potion: " + ID);
+            return null;
         }
     }
 }
